New get telemetry API added and godoc updated
